--- a/index.html
+++ b/index.html
@@ -5,35 +5,103 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
+
 <body>
-     <!-- navigation -->
-  <header>
+    <header>
+        <h1>
+          <a href="/">
+            ChunYu Chang
+          </a>
+        </h1>
+        <nav>
+          <!-- Unordered list element -->
+          <ul>
+            <!-- List item element-->
+            <li>
+              <!-- Anchor element -->
+              <a href="#about-me">About Me</a>
+            </li>
+            <li>
+              <a href="#work">Work</a>
+            </li>
+            <li>
+              <a href="#contact-me">Contact Me</a>
+            </li>
+            <li>
+              <a href="#resume">Resume</a>
+            </li>
+          </ul>
+        </nav>
+    </header>
+
+    <section class="subtitle">
+        <h2>CAT LIFE</h2>
+    </section>
+
+    <section class="about">
+        <div class="about-left section-title">
+            <h1>About Me</h1>
+        </div>
+        <div class="about-right">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio tempora distinctio exercitationem aliquid blanditiis magnam, eligendi asperiores, itaque voluptatem adipisci pariatur unde, placeat dolorem quia alias ipsa officiis repudiandae eaque nulla incidunt? Corrupti veniam nisi facere recusandae, aliquam dolores possimus, sapiente adipisci sunt non quisquam? Accusamus autem ab maxime!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore odio tempora distinctio exercitationem aliquid blanditiis magnam, eligendi asperiores, itaque voluptatem adipisci pariatur unde, placeat dolorem quia alias ipsa officiis repudiandae eaque nulla incidunt? Corrupti veniam nisi facere recusandae, aliquam dolores possimus, sapiente adipisci sunt non quisquam? Accusamus autem ab maxime!</p>
+        </div>
+    </section>
+
+    <section class="work">
+        <div class="work-left section-title">
+            <h1>Work</h1>
+        </div>
+        <div class="work-right">
+            <div class="work-right-top-cpntainer">
+                <span><a href="/"><img src="./assets/images/IMG_9189.JPG"  alt=""></a></span>
+              </div>
+              <div class="work-right-bottom-cpntainer">
+                <div class="flex-item-bottom">
+                  <span><a href="/"><img src="./assets/images/20201114_IMG_1145.jpg" alt=""></a></span>
+                </div>
+                <div class="flex-item-bottom">
+                  <span><a href="/"><img src="./assets/images/20201206_IMG_1738.PNG" alt=""></a></span>
+                </div>
+                <div class="flex-item-bottom">
+                  <span><a href="/"><img src="./assets/images/20210105_IMG_2375.jpg" alt=""></a></span>
+                </div>
+                <div class="flex-item-bottom">
+                  <span><a href="/"><img src="./assets/images/IMG_0357.JPEG" alt=""></a></span>
+                </div>
+              </div>
+        </div>
+    </section>
+
+  <footer>
     <h1>
-      <a href="/">
-        ChunYu Chang
-      </a>
-    </h1>
-    <nav>
-      <!-- Unordered list element -->
-      <ul>
-        <!-- List item element-->
-        <li>
-          <!-- Anchor element -->
-          <a href="#about-me">About Me</a>
-        </li>
-        <li>
-          <a href="#work">Work</a>
-        </li>
-        <li>
-          <a href="#contact-me">Contact Me</a>
-        </li>
-        <li>
-          <a href="#resume">Resume</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-    
+        <a href="/">
+          Contact Me
+        </a>
+      </h1>
+      <nav>
+        <!-- Unordered list element -->
+        <ul>
+          <!-- List item element-->
+          <li>
+            <!-- Anchor element -->
+            <a href="mailto://mr91217@gmail.com">mr91217@gmail.com</a>
+          </li>
+          <li>
+            <a href="#work">GitHub</a>
+          </li>
+          <li>
+            <a href="#contact-me">FaceBook</a>
+          </li>
+          <li>
+            <a href="#resume">Instagram</a>
+          </li>
+        </ul>
+      </nav>
+  </footer>
+
 </body>
+
 </html>
