--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
               <a href="#about-me">About Me</a>
             </li>
             <li>
-              <a href="#work">Work</a>
+              <a href="#work-section">Work</a>
             </li>
             <li>
               <a href="#contact-me">Contact Me</a>
             </li>
             <li>
-              <a href="#resume">Resume</a>
+              <a href="./assets/source/ChunYu-Chang-Resume.pdf">Resume</a>
             </li>
           </ul>
         </nav>
@@ -40,7 +40,7 @@
         <h2>CAT LIFE</h2>
     </section>
 
-    <section class="about">
+    <section id="about-me" class="about">
         <div class="about-left section-title">
             <h1>About Me</h1>
         </div>
@@ -50,36 +50,58 @@
         </div>
     </section>
 
-    <section class="work">
+    <section id="work-section" class="work">
         <div class="work-left section-title">
             <h1>Work</h1>
         </div>
         <div class="work-right">
             <div class="work-right-top-cpntainer">
-                <span><a href="/"><img src="./assets/images/IMG_9189.JPG"  alt=""></a></span>
-              </div>
-              <div class="work-right-bottom-cpntainer">
+                <span><a href="/"><img src="./assets/images/IMG_9189.JPG"  alt="white cat"></a></span>
+                <div class="box-left">
+                    <h3>Surf Report</h3>
+                    <h4>MERN Stack</h4>
+                </div>
+            </div>
+
+            <div class="work-right-bottom-cpntainer">
                 <div class="flex-item-bottom">
-                  <span><a href="/"><img src="./assets/images/20201114_IMG_1145.jpg" alt=""></a></span>
+                  <span><a href="/"><img src="./assets/images/20201114_IMG_1145.jpg" alt="black cat"></a></span>
+                  <div class="box-center">
+                    <h3>LED Wall</h3>
+                    <h4>Node</h4>
+                  </div>
+                </div>
+
+                <div class="flex-item-bottom">
+                  <span><a href="/"><img src="./assets/images/20201206_IMG_1738.PNG" alt="white cat"></a></span>
+                  <div class="box-center">
+                    <h3>Calculator</h3>
+                    <h4>React/JavaScript/CSS</h4>
+                  </div>
                 </div>
                 <div class="flex-item-bottom">
-                  <span><a href="/"><img src="./assets/images/20201206_IMG_1738.PNG" alt=""></a></span>
+                  <span><a href="/"><img src="./assets/images/20210105_IMG_2375.jpg" alt="dog"></a></span>
+                  <div class="box-center">
+                    <h3>Pastel Puzzels</h3>
+                    <h4>MERN Stack</h4>
+                  </div> 
                 </div>
                 <div class="flex-item-bottom">
-                  <span><a href="/"><img src="./assets/images/20210105_IMG_2375.jpg" alt=""></a></span>
+                  <span><a href="https://mr91217.github.io/run-buddy/"><img src="./assets/images/20210125_IMG_2872.PNG" alt="black cat"></a></span>
+                  <div class="box-center">
+                    <h3>Run Buddy</h3>
+                    <h4>HTML/CSS</h4>
+                  </div>
                 </div>
-                <div class="flex-item-bottom">
-                  <span><a href="/"><img src="./assets/images/IMG_0357.JPEG" alt=""></a></span>
-                </div>
-              </div>
+            </div>
         </div>
     </section>
 
-  <footer>
+  <footer id="contact-me">
     <h1>
-        <a href="/">
+        
           Contact Me
-        </a>
+        
       </h1>
       <nav>
         <!-- Unordered list element -->
@@ -90,13 +112,13 @@
             <a href="mailto://mr91217@gmail.com">mr91217@gmail.com</a>
           </li>
           <li>
-            <a href="#work">GitHub</a>
+            <a href="https://github.com/mr91217">GitHub</a>
           </li>
           <li>
-            <a href="#contact-me">FaceBook</a>
+            <a href="/">FaceBook</a>
           </li>
           <li>
-            <a href="#resume">Instagram</a>
+            <a href="https://instagram.com/subada_330addsti?utm_medium=copy_link">Instagram</a>
           </li>
         </ul>
       </nav>
